--- a/public/css/hotel.css
+++ b/public/css/hotel.css
@@ -597,3 +597,249 @@
 .available{
     color: rgb(112, 184, 40);
 }
+
+
+
+/******************************************BOOK ROOM RESERVATION*********************************************/
+
+#book-room-page .title{
+    font-size: larger;
+    font-weight: bolder;
+    color: #2c2c2c;
+}
+
+#book-room-page>.container{
+    box-shadow: 0px 5px 10px 5px rgb(187, 187, 187);
+    border-radius: 5px;
+    padding: 20px 15px 25px 15px;
+}
+
+#book-room-page>.search-container{
+    width:80%
+}
+
+#book-room-page .room-title{
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+#book-room-page .room-features{
+    font-size: 0.9em;
+    margin-bottom: 5px;
+}
+
+#book-room-page .fa-square{
+    margin-right: 3px;
+}
+
+@media screen and (max-width: 992px) {
+    #book-room-page .room-title, #book-room-page .room-features, #book-room-page .date{
+        width: 75%;
+    }
+  }
+
+
+  @media screen and (max-width: 576px) {
+    #book-room-page .buttons, #book-room-page .price{
+        width: 45%;
+    }
+  }
+
+  @media screen and (min-width:576px) and (max-width: 768px) {
+    #book-room-page .buttons, #book-room-page .price{
+        width: 34%;
+    }
+  }
+
+  @media screen and (min-width:768px) and (max-width: 992px) {
+    #book-room-page .buttons{
+        width: 100%;
+    }
+  }
+
+  @media screen and (min-width:992px) and (max-width: 1200px) {
+    #book-room-page .buttons{
+        width: 80%;
+    }
+  }
+
+  @media screen and (min-width:1200px) and (max-width: 1300px) {
+    #book-room-page .buttons{
+        width: 100%;
+    }
+  }
+
+  @media screen and (min-width:1300px){
+    #book-room-page .buttons{
+        width: 90%;
+    }
+  }
+
+#book-room-page .price{
+    font-size: 1.3em;
+    font-weight: bold;
+    color: #a68b58;
+}
+
+#book-room-page .buttons{
+    border: none;
+    border-radius: 5px;
+    padding: 7px 15px 7px 15px;
+    background-color: #505050;
+    font-size: 0.9em;
+    color:rgb(255, 255, 255);
+    transition-property: transform;
+    transition-duration: 0.3s;
+}
+
+#book-room-page .buttons:hover, #book-room-page .buttons:active{
+    transform:scale(0.95);
+}
+
+#book-room-page .pop-up .pop-up-body > .room-description{
+    text-align: justify;
+    padding-top: 4px;
+}  
+
+@media screen and (min-width:768px){
+    #book-room-page .pop-up .pop-up-body > .room-description{
+        font-size: 0.85em;
+    }  
+}
+
+@media screen and (max-width:768px){
+    #book-room-page .pop-up .pop-up-body > .room-description{
+        font-size: 0.8em;
+    }  
+}
+
+
+#book-room-page .pop-up{
+    display: none;
+    opacity: 0;
+    z-index: 2;
+    transition-property:opacity;
+    transition-duration: 0.6s;
+}
+
+#blur-background-book-room{
+    display: none;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 0.6s;
+}
+
+#book-room-page .pop-up > *{
+    position: fixed;
+}
+
+#book-room-page .pop-up > .pop-up-room-title{
+    font-size: 1.2em;
+    top: 10%;
+    left: 50%;
+    height: 6.5%;
+    width: 50%;
+    transform: translate(-50%);
+    background-color: #ffffff;
+    padding-left: 10px;
+    border-radius: 5px 5px 0px 0px;
+    border-bottom: solid 1px rgb(220, 220, 220);
+}
+
+#book-room-page .pop-up > .pop-up-body{
+    top: 16.5%;
+    left: 50%;
+    width: 50%;
+    height: 65%;
+    overflow-y: scroll;
+    transform: translate(-50%);
+    background-color:rgb(255, 255, 255);
+    padding: 10px 10px 20px;
+}
+
+#book-room-page .pop-up > .pop-up-body > .room-services .room-service-names{
+    font-size: 10px;
+    line-height: 13px;
+    color: #505050;
+}
+
+#book-room-page .pop-up > .pop-up-body > .room-services .room-service-icons{
+    font-weight: 400;
+}
+
+#book-room-page .pop-up > .close-button{
+    top: 81.5%;
+    left: 50%;
+    height: 8%;
+    width: 50%;
+    transform: translate(-50%);
+    background-color: rgb(255, 255, 255);
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 0px -2px 5px 0px rgb(200, 200, 200);
+}
+
+@media screen and (min-width:992px){
+    #book-room-page .pop-up > .pop-up-room-title {
+        width: 50%;
+    }
+
+    #book-room-page .pop-up > .pop-up-body{
+        width: 50%;
+    }
+
+    #book-room-page .pop-up > .close-button{
+        width: 50%;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:992px){
+    #book-room-page .pop-up > .pop-up-room-title {
+        width: 60%;
+    }
+
+    #book-room-page .pop-up > .pop-up-body{
+        width: 60%;
+    }
+
+    #book-room-page .pop-up > .close-button{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width:768px){
+    #book-room-page .pop-up > .pop-up-room-title {
+        width: 70%;
+    }
+
+    #book-room-page .pop-up > .pop-up-body{
+        width: 70%;
+    }
+
+    #book-room-page .pop-up > .close-button{
+        width: 70%;
+    }
+}
+
+#book-room-page .pop-up > .close-button > button{
+    border: none;
+    border-radius: 5px;
+    padding: 7px 25px 7px 25px;
+    background-color: #505050;
+    font-size: 0.8em;
+    color:rgb(255, 255, 255);
+    transition-property: background-color;
+    transition-duration: 0.5s;
+}
+
+#book-room-page .pop-up > .close-button > button:hover{
+    background-color: #000000;
+}
+
+.date{
+    font-weight: 800;
+    color: rgb(92, 92, 92);
+}
